--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>MoonMembers</title>
 		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Muli:400,600,700,800,900" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="app"></div>
