--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="icon" href="/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>MoonMembers</title>
-		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
+		<title>MittMedlemskap</title>
 		<link href="https://fonts.googleapis.com/css?family=Muli:400,600,700,800,900" rel="stylesheet" />
 	</head>
 	<body>
